<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

    <!--<ImageButton-->
        <!--android:id="@+id/navDrawerBtn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:src="@drawable/ic_menu_white_24dp"-->
        <!--android:background="@android:color/transparent"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccentBlue"
        android:gravity="right"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Black Sky Lenses"
        app:titleTextColor="@color/colorAccent"
        app:titleTextAppearance="@style/ToolbarTitle"/>


    <android.support.design.widget.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        style="@style/TabLayout"
        app:tabSelectedTextColor="@color/colorAccentBlue"
        app:tabTextColor="#0F1622"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/colorAccentBlue"
        app:tabIndicatorHeight="2dp"
        android:elevation="0dp"
        app:tabTextAppearance="@style/TabText">

        <android.support.design.widget.TabItem
            android:id="@+id/tabDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            />

        <android.support.design.widget.TabItem
            android:id="@+id/tabClients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_client"
            />

        <android.support.design.widget.TabItem
            android:id="@+id/tabOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utilities"
            />

    </android.support.design.widget.TabLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>