<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewClient">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ncToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccentBlue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#fafafa"
        android:background="#fafafa"
        app:cardCornerRadius="1dp"
        android:padding="10dp"
        android:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/new_client"
                style="@style/FormApplication"/>


            <LinearLayout
                android:layout_margin="5dp"
                android:id="@+id/potentialClientsForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Service:"
                    />

                <Spinner
                    android:id="@+id/ncServiceSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ncNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccentBlue"
                    android:hint="Name"
                    style="@style/FormApplication"
                    android:inputType="text"
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:textColor="#333"
                    android:textColorHint="#6D7A88"
                    />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ncPhoneEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccentBlue"
                    android:hint="Phone"
                    android:maxLines="1"
                    android:inputType="phone"
                    style="@style/FormApplication"
                    android:textColor="#333"
                    android:textColorHint="#6D7A88"
                    />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ncLocationEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccentBlue"
                    android:hint="Location"
                    android:maxLines="1"
                    android:inputType="text"
                    style="@style/FormApplication"
                    android:textColor="#333"
                    android:textColorHint="#6D7A88"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.button.MaterialButton
                        android:id="@+id/ncDatePicker"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccentBlue"
                        android:text="@string/pick_date"
                        android:textAppearance="@style/FormApplication"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:textColor="#fff"/>

                    <TextView
                        android:id="@+id/ncDateTxt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:layout_margin="5dp"
                        android:text="@string/pick_date"
                        android:textColor="#404040"
                        style="@style/FormApplication"/>
                </LinearLayout>

                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.button.MaterialButton
                        android:id="@+id/ncTimePicker"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccentBlue"
                        android:text="@string/pick_time"
                        android:textAppearance="@style/FormApplication"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:textColor="#fff"/>

                    <TextView
                        android:id="@+id/ncTimeTxt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:layout_margin="5dp"
                        android:text="@string/pick_time"
                        android:textColor="#404040"
                        style="@style/FormApplication"/>
                </LinearLayout>

                <android.support.design.button.MaterialButton
                    android:id="@+id/ncAddPotentialClientBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccentBlue"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_potential_client"
                    android:textAppearance="@style/FormApplication"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textColor="#fff"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>