<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F1F1F1"
    tools:context=".fragments.New_Clients">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccentBlue"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#fafafa"
                android:background="#fafafa"
                app:cardCornerRadius="1dp"
                android:padding="10dp"
                android:elevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/service_provider"
                        style="@style/FormApplication"/>


                    <LinearLayout
                        android:layout_margin="5dp"
                        android:id="@+id/serviceForm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/nsServiceEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorAccentBlue"
                            android:hint="Service"
                            style="@style/FormApplication"
                            android:inputType="textCapWords"
                            android:textAllCaps="true"
                            android:maxLines="1"
                            android:textColor="#333"
                            android:textColorHint="#6D7A88"
                            />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/nsNameEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorAccentBlue"
                            android:hint="Name"
                            style="@style/FormApplication"
                            android:inputType="text"
                            android:textAllCaps="true"
                            android:maxLines="1"
                            android:textColor="#333"
                            android:textColorHint="#6D7A88"
                            />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/nsPhoneEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorAccentBlue"
                            android:hint="Phone"
                            android:maxLines="1"
                            android:inputType="phone"
                            style="@style/FormApplication"
                            android:textColor="#333"
                            android:textColorHint="#6D7A88"
                            />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/nsAgreedAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorAccentBlue"
                            android:hint="Agreed Amount"
                            android:maxLines="1"
                            android:inputType="number"
                            style="@style/FormApplication"
                            android:textColor="#333"
                            android:textColorHint="#6D7A88"
                            />
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/nsDepositAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorAccentBlue"
                            android:hint="Paid Deposit"
                            android:maxLines="1"
                            android:inputType="number"
                            style="@style/FormApplication"
                            android:textColor="#333"
                            android:textColorHint="#6D7A88"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <android.support.design.button.MaterialButton
                                android:id="@+id/nsDatePicker"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:background="@color/colorAccentBlue"
                                android:text="@string/pick_date"
                                android:textAppearance="@style/FormApplication"
                                android:padding="10dp"
                                android:textAlignment="center"
                                android:textColor="#fff"/>

                            <TextView
                                android:id="@+id/nsDateTxt"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:paddingLeft="10dp"
                                android:paddingStart="10dp"
                                android:layout_margin="5dp"
                                android:text="@string/pick_date"
                                android:textColor="#404040"
                                style="@style/FormApplication"/>
                        </LinearLayout>

                        <View style="@style/Divider"/>

                        <android.support.design.button.MaterialButton
                            android:id="@+id/nsAddServiceBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorAccentBlue"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/add_service_provider"
                            android:textAppearance="@style/FormApplication"
                            android:padding="10dp"
                            android:textAlignment="center"
                            android:textColor="#fff"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>